// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFormErrors doesn't sets an error on unknown fields 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionChoiceButton": Object {
        "fieldOptions": Object {
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionChoiceButtonMultiple": Object {
        "fieldOptions": Object {
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionPassword": Object {
        "type": "password",
      },
      "questionPeriod": Object {
        "fieldOptions": Object {
          "notExist": Object {
            "errorMessages": "Sub field does not exist",
          },
        },
        "type": "period",
      },
      "questionString": Object {
        "fieldOptions": Object {
          "errorMessages": "Incorrect value",
        },
        "type": "text",
      },
    },
  },
}
`;

exports[`setFormErrors sets error messages on fields 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionChoiceButton": Object {
        "fieldOptions": Object {
          "errorMessages": Array [
            "Erreur 1",
            "Erreur 2",
          ],
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionChoiceButtonMultiple": Object {
        "fieldOptions": Object {
          "errorMessages": "Erreur",
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionPassword": Object {
        "fieldOptions": Object {
          "errorMessages": "Erreur",
        },
        "type": "password",
      },
      "questionPeriod": Object {
        "fieldOptions": Object {
          "from": Object {
            "errorMessages": Array [
              "Erreur 1",
              "Erreur 2",
            ],
          },
          "to": Object {
            "errorMessages": Array [
              "Erreur 1",
              "Erreur 2",
            ],
          },
        },
        "type": "period",
      },
      "questionString": Object {
        "fieldOptions": Object {
          "errorMessages": Array [
            "Erreur 1",
            "Erreur 2",
          ],
        },
        "type": "text",
      },
    },
  },
}
`;

exports[`setFormErrors skips errors with wrong types 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionChoiceButton": Object {
        "fieldOptions": Object {
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionChoiceButtonMultiple": Object {
        "fieldOptions": Object {
          "type": "choiceButton",
        },
        "items": Array [],
        "type": "select",
      },
      "questionPassword": Object {
        "type": "password",
      },
      "questionPeriod": Object {
        "type": "period",
      },
      "questionString": Object {
        "type": "text",
      },
    },
  },
}
`;
